--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,17 @@ config/secrets.yml
 /vendor/assets/bower_components
 *.bowerrc
 bower.json
+\#*
+*~
+.#*
+.DS_Store
+.idea
+.project
+.sass-cache
+coverage
+Gemfile.lock
+tmp
+nbproject
+pkg
+*.swp
+spec/dummy
